# Pyt

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  INTEGRATION_SUMMARY.md  LICENSE  Makefile  README.md  README_ADD_DATASET.md  README_DEV_SCRIPTS.md  README_HAIRNET_DETECTION.md  README_TRAINING.md  README_WEB_TESTING.md  README_YOLO_INTEGRATION.md  activate_env.ps1  add_dataset.py  check_dev_env.py  check_gpu.py  check_ultralytics.py  compare_yolo_models.py  comprehensive_detection_test_report.md  debug_api_response.py  debug_human_detector.py  demo_auto_video_display.py  demo_camera_realtime.py  demo_enhanced_detection.py  demo_output.txt  demo_realtime_detection.py  demo_unified_visualization.py  demo_video_display.py  demo_visual_detection.py  deploy_win.bat  dev_env_report.json  docker-compose.yml  example_usage.py  main.py  mypy.ini  (+44 more)
.github/workflows/: ci.yml
.trae/rules/: project_rules.md
backup/tests/unit/: test_api.py  test_behavior_recognizer.py  test_data_manager.py  test_math_utils.py  test_motion_analyzer.py  test_pose_detector.py  test_threshold_adjustment.py
config/: default.yaml  enhanced_detection_config.yaml  regions.json  unified_params.yaml
deployment/: README.md  deploy_win.bat
development/: README.md  setup_dev_env.sh  start_dev.sh
docs/: API_使用示例.md  API_文档.md  MEDIAPIPE_INTEGRATION.md  MediaPipePoseDetector重构报告.md  MediaPipe_GPU_自动配置.md  PROJECT_CLEANUP_SUMMARY.md  README.md  README_ADD_DATASET.md  README_DEV_SCRIPTS.md  README_HAIRNET_DETECTION.md  README_TRAINING.md  README_WEB_TESTING.md  README_YOLO_INTEGRATION.md  SCRIPTS_ORGANIZATION_SUMMARY.md  SCRIPTS_PATH_FIX_SUMMARY.md  手部行为检测改进分析报告.md  手部行为识别实施方案.md  技术方案.md  敏捷迭代执行方案.md  文档整理方案.md  洗手行为检测功能说明.md  环境激活指南.md  硬件部署方案.md  移除备用检测器改进方案.md  视频检测录制功能使用说明.md  项目开发指南.md  项目执行方案.md
examples/: example_usage.py  integrate_yolo_detector.py  use_yolo_hairnet_detector.py
frontend/: app.js  debug_frontend.html  index.html  region_config.html  region_config.js  region_test.html  statistics.html  yolo_test.html
models/: README.md
models/behavior_recognition/: .gitkeep
models/hairnet_detection/weights/: .gitkeep
models/hairnet_model/: args.yaml  results.csv
models/pose_detection/: .gitkeep
models/yolo/: .gitkeep
reports/: agile_implementation_status_report.md  backup_detector_removal_test_report.md  comprehensive_detection_test_report.md  directory_cleanup_report.md  duplicate_tests_removal_report.md  duplicate_tests_report.md  migration_report.md  model_files_organization_report.md  model_path_migration_complete.md  model_path_update_report.md  model_protection_update.md  parameter_optimization_validation_report.md  test_cleanup_report.md  test_cleanup_summary.md  test_optimization_recommendations.md
scripts/: README_TRAINING.md  add_dataset.py  analyze_detection_parameters.py  analyze_test_cases.py  check_all_sprints.py  check_dev_env.py  check_sprint0.py  cleanup_root_directory.py  cleanup_tests.py  compare_yolo_models.py  create_realistic_test.py  create_test_image.py  debug_detection_parameters.py  demo_handwash_detection.py  detection_config_optimized.py  enhanced_roi_visualizer.py  find_duplicate_tests.py  fix_test_issues.py  improved_head_roi.py  init_db.sql  migrate_to_unified_params.py  optimize_human_detector.py  organize_model_files.py  organize_tests.py  prepare_roboflow_dataset.py  remove_duplicate_tests.py  run_simple_detection.py  setup_dev.sh  test_hairnet_model.py  train_hairnet_model.py  update_model_paths.py  update_test_paths.py  validate_parameter_optimization.py  verify_model_paths.py  view_enhanced_results.py  view_improved_roi.py  view_roi_results.py  visualize_roi.py
src/: __init__.py
src/api/: __init__.py  app.py
src/api/routers/: comprehensive.py  download.py  region_management.py  statistics.py  websocket.py
src/config/: __init__.py  camera_config.py  model_config.py  settings.py  unified_params.py
src/core/: __init__.py  behavior.py  data_manager.py  deep_behavior_recognizer.py  detector.py  enhanced_hand_detector.py  enhanced_motion_analyzer.py  hairnet_detection_factory.py  hairnet_detector.py  motion_analyzer.py  optimized_detection_pipeline.py  performance_optimizer.py  personalization_engine.py  pose_detector.py  quality_assessor.py  region.py  rule_engine.py  tracker.py  yolo_hairnet_detector.py
src/detection/: __init__.py
src/services/: detection_service.py  realtime_video_detection.py  region_service.py  video_service.py  websocket_service.py
src/utils/: __init__.py  data_collector.py  file_utils.py  image_utils.py  logger.py  math_utils.py  video_utils.py  visualization.py
static/: app.js
testing/: README.md  start_testing.sh  test_api_curl.sh
tests/: README.md  __init__.py  conftest.py  test_comprehensive_detection.py
tests/fixtures/: README.md
tests/fixtures/images/hairnet/: test_image_placeholder.txt
tests/integration/: __init__.py  test_api.py  test_api_endpoints.py  test_api_integration.py  test_comprehensive_api.py  test_detailed_hairnet_analysis.py  test_hairnet_detection.py  test_handwash_detection.py  test_handwash_detection_integration.py  test_handwash_realtime.py  test_handwash_static.py  test_light_blue_hairnet.py  test_mediapipe_integration.py  test_real_hairnet_image.py  test_realtime_detection.py  test_sprint2_api.py  test_video_recording.py  test_with_hairnet.py  test_with_real_fixtures.py  test_with_real_image.py
tests/unit/: __init__.py  test_behavior_recognizer.py  test_data_manager.py  test_detect_hairnet.py  test_detector.py  test_dual_channel_hairnet.py  test_hairnet_detector.py  test_handwash_behavior.py  test_integrated_hairnet_detection.py  test_math_utils.py  test_motion_analyzer.py  test_pose_detector.py  test_roi_visualization.py  test_threshold_adjustment.py
training/: README.md  start_training.ps1  start_training.sh
user_profiles/: demo_user.json
